comentario adicionado no jupyter lab

--- a/corpcard.ipynb
+++ b/corpcard.ipynb
@@ -12,6 +12,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3dc067a7-f07f-44ce-86ce-431d9d129131",
+   "metadata": {},
+   "source": [
+    "# Versão por LucasGamiz"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "6c579f42-6bd1-416d-9e5e-0e1ff9788c58",
@@ -175,14 +183,6 @@
     "plt.tight_layout()\n",
     "fig.savefig('anual.png')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae1b5270-80af-407d-be54-e8853044310f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -201,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
